Save the web session cookie along with the crumb
As of Jenkins 2.176.2, Jenkins' CSRF issuer requires a corresponding
web session ID to be submitted along with the crumb. For more info,
see:

https://jenkins.io/security/advisory/2019-07-17/#SECURITY-626

--- a/tasks/cancel-quiet-mode.yml
+++ b/tasks/cancel-quiet-mode.yml
@@ -8,6 +8,7 @@
     method: POST
     headers:
       Content-Type: "text/xml"
+      Cookie: "{{ jenkins_crumb_cookie }}"
       Jenkins-Crumb: "{{ jenkins_crumb_token }}"
     status_code: 200,302
   when: jenkins_auth == "crumb"
