--- a/molecule/api-token/molecule.yml
+++ b/molecule/api-token/molecule.yml
@@ -25,6 +25,19 @@ provisioner:
       # All workarounds for this are uglier than just comparing to empty strings. See:
       # https://github.com/ansible/ansible-lint/issues/457
       x: ['602']
+scenario:
+  test_sequence:
+    - destroy
+    - create
+    - converge
+    # The idempotence check must be disabled for this scenario, because we are copying
+    # custom files for user accounts. These files (or rather, their parent directories)
+    # are renamed by Jenkins when it starts up in order to avoid naming conflicts. So
+    # "users/molecule/config.xml" becomes "users/molecule_7942252632599620805/config.xml",
+    # with a randomly-generated number.
+    # - idempotence
+    - lint
+    - verify
 verifier:
   name: testinfra
   lint:
