--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,14 @@
 ---
+- include: "sanity-checks.yml"
+
 - include: "{{ jenkins_install_via }}/install.yml"
 
 - include: "configure-jenkins.yml"
 
-- include: "configure-plugins.yml"
-
 - include: "configure-files.yml"
   when: jenkins_include_custom_files
+
+- include: "configure-plugins.yml"
 
 - include: "configure-jobs.yml"
 
